--- a/public/security-warning.html
+++ b/public/security-warning.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xavfsizlik ogohlantirishi</title>
+    <title>Security Warning</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,12 +58,12 @@
 <body>
     <div class="container">
         <div class="warning-icon">⚠️</div>
-        <h1>Xavfsizlik ogohlantirishi</h1>
+        <h1>Security Warning</h1>
         <p>
-            Sizning brauzeringizda developer tools ochiq. Bu xavfsizlik muammosini keltirib chiqarishi mumkin. 
-            Iltimos, developer tools'ni yoping va sahifani qayta yuklang.
+            Developer tools are open in your browser. This may pose a security risk. 
+            Please close the developer tools and reload the page.
         </p>
-        <a href="/" class="btn">Bosh sahifaga qaytish</a>
+        <a href="/" class="btn">Return to Home Page</a>
     </div>
     
     <script>
